@@ -1,14 +1,14 @@
 
 <!doctype html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html><head><title>Python: module pyopenbabel</title>
+<html><head><title>Python: module pybel</title>
 </head><body bgcolor="#f0f0f8">
 
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="heading">
 <tr bgcolor="#7799ee">
 <td valign=bottom>&nbsp;<br>
-<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>pyopenbabel</strong></big></big></font></td
+<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>pybel</strong></big></big></font></td
 ><td align=right valign=bottom
-><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/home/vmware/Tools/pyopenbabel/pyopenbabel.py">/home/vmware/Tools/pyopenbabel/pyopenbabel.py</a></font></td></tr></table>
+><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/home/vmware/Tools/openbabel/scripts/python/pybel.py">/home/vmware/Tools/openbabel/scripts/python/pybel.py</a></font></td></tr></table>
     <p></p>
 <p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
@@ -30,10 +30,10 @@
 <dt><font face="helvetica, arial"><a href="__builtin__.html#object">__builtin__.object</a>
 </font></dt><dd>
 <dl>
-<dt><font face="helvetica, arial"><a href="pyopenbabel.html#Atom">Atom</a>
-</font></dt><dt><font face="helvetica, arial"><a href="pyopenbabel.html#Molecule">Molecule</a>
-</font></dt><dt><font face="helvetica, arial"><a href="pyopenbabel.html#Outputfile">Outputfile</a>
-</font></dt><dt><font face="helvetica, arial"><a href="pyopenbabel.html#Smarts">Smarts</a>
+<dt><font face="helvetica, arial"><a href="pybel.html#Atom">Atom</a>
+</font></dt><dt><font face="helvetica, arial"><a href="pybel.html#Molecule">Molecule</a>
+</font></dt><dt><font face="helvetica, arial"><a href="pybel.html#Outputfile">Outputfile</a>
+</font></dt><dt><font face="helvetica, arial"><a href="pybel.html#Smarts">Smarts</a>
 </font></dt></dl>
 </dd>
 </dl>
@@ -44,7 +44,7 @@
 <font color="#000000" face="helvetica, arial"><a name="Atom">class <strong>Atom</strong></a>(<a href="__builtin__.html#object">__builtin__.object</a>)</font></td></tr>
     
 <tr bgcolor="#ffc8d8"><td rowspan=2><tt>&nbsp;&nbsp;&nbsp;</tt></td>
-<td colspan=2><tt>Represent&nbsp;a&nbsp;PyOpenBabel&nbsp;atom.<br>
+<td colspan=2><tt>Represent&nbsp;a&nbsp;Pybel&nbsp;atom.<br>
 &nbsp;<br>
 Optional&nbsp;parameters:<br>
 &nbsp;&nbsp;&nbsp;OBAtom&nbsp;--&nbsp;an&nbsp;Open&nbsp;Babel&nbsp;<a href="#Atom">Atom</a>&nbsp;(default&nbsp;is&nbsp;None)<br>
@@ -87,7 +87,7 @@ Data and other attributes defined here:<br>
 <font color="#000000" face="helvetica, arial"><a name="Molecule">class <strong>Molecule</strong></a>(<a href="__builtin__.html#object">__builtin__.object</a>)</font></td></tr>
     
 <tr bgcolor="#ffc8d8"><td rowspan=2><tt>&nbsp;&nbsp;&nbsp;</tt></td>
-<td colspan=2><tt>Represent&nbsp;a&nbsp;PyOpenBabel&nbsp;molecule.<br>
+<td colspan=2><tt>Represent&nbsp;a&nbsp;Pybel&nbsp;molecule.<br>
 &nbsp;<br>
 Optional&nbsp;parameters:<br>
 &nbsp;&nbsp;&nbsp;OBMol&nbsp;--&nbsp;an&nbsp;Open&nbsp;Babel&nbsp;molecule&nbsp;(default&nbsp;is&nbsp;None)<br>
@@ -228,7 +228,7 @@ You&nbsp;can&nbsp;access&nbsp;the&nbsp;first&nbsp;molecule&nbsp;in&nbsp;a&nbsp;f
 &nbsp;&nbsp;&nbsp;&nbsp;mol&nbsp;=&nbsp;<a href="#-readfile">readfile</a>("smi",&nbsp;"myfile.smi").next()<br>
 &nbsp;&nbsp;&nbsp;&nbsp;<br>
 You&nbsp;can&nbsp;make&nbsp;a&nbsp;list&nbsp;of&nbsp;the&nbsp;molecules&nbsp;in&nbsp;a&nbsp;file&nbsp;using:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;mols&nbsp;=&nbsp;[mol&nbsp;for&nbsp;mol&nbsp;in&nbsp;<a href="#-readfile">readfile</a>("smi",&nbsp;"myfile.smi")<br>
+&nbsp;&nbsp;&nbsp;&nbsp;mols&nbsp;=&nbsp;[mol&nbsp;for&nbsp;mol&nbsp;in&nbsp;<a href="#-readfile">readfile</a>("smi",&nbsp;"myfile.smi")]<br>
 &nbsp;&nbsp;&nbsp;&nbsp;<br>
 You&nbsp;can&nbsp;iterate&nbsp;over&nbsp;the&nbsp;molecules&nbsp;in&nbsp;a&nbsp;file&nbsp;as&nbsp;shown&nbsp;in&nbsp;the<br>
 following&nbsp;code&nbsp;snippet...<br>
