@@ -62,7 +62,7 @@ setup(name='openbabel',
       author_email='openbabel-scripting@lists.sourceforge.net',
       url='http://openbabel.sourceforge.net/',
       license='http://www.gnu.org/copyleft/gpl.html',
-      py_modules=['openbabel','pyopenbabel'],
+      py_modules=['openbabel','pybel'],
       ext_modules=[obExtension],
       description = 'openbabel: Python interface to the Open Babel chemistry library',
       classifiers=[
